--- a/RozetkaOnePage.app/RozetkaOnePage.app/Views/MainView.xaml
+++ b/RozetkaOnePage.app/RozetkaOnePage.app/Views/MainView.xaml
@@ -2,10 +2,175 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RozetkaOnePage.app.Views.MainView"
-             Title="{Binding Title}">
+             xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
+             xmlns:control="clr-namespace:RozetkaOnePage.app.CustomControls"
+             Title="{Binding Title}"
+              x:Name="MyPage">
 
-    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-        <Label Text="Welcome to Xamarin Forms and Prism!" />
+    <StackLayout
+        Orientation="Vertical"
+        BackgroundColor="#00A046">
+        <StackLayout
+            Orientation="Horizontal">
+            <Label
+                Text="ROZETKA" 
+                Margin="60,0,0,0"
+                TextColor="White"
+                FontSize="Large"
+                VerticalOptions="StartAndExpand"
+                HorizontalOptions="CenterAndExpand"/>
+            <Image
+                Source="cart32w"
+                Margin="0,0,15,0"
+                VerticalOptions="StartAndExpand"
+                HorizontalOptions="End"
+                Scale="0.8"/>
+        </StackLayout>
+        <Frame
+            Grid.Row="0"
+                Margin="15,5,15,15"
+                Padding="0"
+                BackgroundColor="White"
+                CornerRadius="14">
+            <control:CustomSearchBar 
+                Margin="0,0,10,0"
+                Grid.Row="0"
+                Placeholder="Я ищу..."
+                PlaceholderColor="Gray"
+                TextColor="Black"
+                BackgroundColor="Transparent"
+                HorizontalOptions="FillAndExpand"/>
+        </Frame>
+
+        <flv:FlowListView
+            Margin="0,-7,0,0"
+            FlowColumnCount="2"
+            Header="{Binding}"
+            HasUnevenRows="True"
+            BackgroundColor="#F6F6F6"
+            FlowItemsSource="{Binding Products}">
+
+            <flv:FlowListView.HeaderTemplate>
+                <DataTemplate>
+                    <Label
+                        Text="Популяные товары"
+                        Margin="12,4,0,8"
+                        FontSize="Medium"
+                        TextColor="#3B393A"
+                        BackgroundColor="Transparent"/>
+                </DataTemplate>
+            </flv:FlowListView.HeaderTemplate>
+
+            <flv:FlowListView.FlowColumnTemplate>
+                <DataTemplate>
+                    <StackLayout
+                        Orientation="Vertical"
+                        Margin="1.5">
+                        <StackLayout
+                            Orientation="Horizontal"
+                            BackgroundColor="White"
+                            Margin="0,0,0,-5"
+                            HeightRequest="55">
+                            <Label
+                                Text="Категория"
+                                FontSize="Medium"
+                                Margin="7,0,0,0"
+                                VerticalOptions="Center"
+                                TextColor="#6C8DA1"/>
+                            <Image
+                                Source="rightArrow"
+                                HeightRequest="45"
+                                VerticalOptions="EndAndExpand"/>
+                        </StackLayout>
+                        <Grid
+                            BackgroundColor="White">
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer
+                                        Command="{Binding Path=BindingContext.SelectedItemCommand, Source={x:Reference Name=MyPage}}"
+                                        CommandParameter="{Binding Id}"/>
+                            </Grid.GestureRecognizers>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Image
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Margin="10"
+                                HeightRequest="100"
+                                Source="{Binding Image}">
+                            </Image>
+
+                            <Image
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Margin="6,0,0,0"
+                                Source="ratingFive"
+                                HeightRequest="45"
+                                VerticalOptions="CenterAndExpand"/>
+                            <Label
+                                Text="157 oтзывов"
+                                Margin="0,0,0,1"
+                                TextColor="Gray"
+                                FontSize="Micro"
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                VerticalOptions="CenterAndExpand"/>
+
+                            <Label
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Margin="7,-20,0,0"
+                                Text="Название товара"
+                                TextColor="#6C8DA1"/>
+                            <ContentView
+                                Grid.Row="3"
+                                Grid.Column="0"
+                                Margin="12,4,0,-2"
+                                HeightRequest="1.5"
+                                VerticalOptions="CenterAndExpand"
+                                BackgroundColor="Red"/>
+                            <Label
+                                Grid.Row="3"
+                                Grid.Column="0"
+                                
+                                Margin="12,0,0,0"
+                                Text="19 500 грн"
+                                TextColor="Gray"/>
+                            <Frame
+                                Grid.Row="4"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                Margin="7,0,0,15"
+                                Padding="0"
+                                HasShadow="False"
+                                BackgroundColor="#FDF5C4"
+                                HorizontalOptions="StartAndExpand"
+                                CornerRadius="1">
+                                <Label
+                                    Grid.Row="3"
+                                    Grid.Column="0"
+                                    Grid.ColumnSpan="2"
+                                    Margin="5,4,4,5"
+                                    Text="20 500 грн"
+                                    TextColor="#3B393A"/>
+                            </Frame>
+                        </Grid>
+                    </StackLayout>
+                </DataTemplate>
+            </flv:FlowListView.FlowColumnTemplate>
+
+        </flv:FlowListView>
+
     </StackLayout>
 
 </ContentPage>
